<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.anonyxhappie.dwarf.justjava.MainActivity" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_name"
            android:maxLines="1"
            android:maxLength="15"
            android:hint="@string/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/customHeader"
            android:text="@string/toppings" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_whippedCream"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/whippedCream"
                android:layout_marginLeft="24dp"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/cb_chocolate"
                android:checked="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chocolate"
                android:layout_marginLeft="24dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <TextView
            style="@style/customHeader"
            android:text="@string/quantity" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/decrement_button"
                android:onClick="decrement"
                android:text="-"
                android:layout_width="48dp"
                android:layout_height="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:padding="8dp"
                android:textColor="#000"
                android:id="@+id/quantity_text_view"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/increment_button"
                android:onClick="increment"
                android:text="+"
                android:layout_width="48dp"
                android:layout_height="48dp" />

        </LinearLayout>

        <!--TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            android:text="Price" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="$0.00"
            android:textColor="#000"
            android:id="@+id/price_text_view"
            android:textStyle="bold"/-->

        <Button
            android:id="@+id/sumit_button"
            android:text="@string/order"
            android:layout_marginTop="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"/>

    </LinearLayout>
</ScrollView>